-- Production-only database schema.

BEGIN;

CREATE SCHEMA IF NOT EXISTS production;

-- MainServer submits jobs; Sequencer owns production execution writes.

CREATE TABLE IF NOT EXISTS production.parts (
    part_id text PRIMARY KEY,
    part_name text NOT NULL,
    part_category text NOT NULL,
    stock_quantity integer NOT NULL DEFAULT 0,
    CONSTRAINT ck_parts_stock CHECK (stock_quantity >= 0)
);

CREATE TABLE IF NOT EXISTS production.products (
    product_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_code text NOT NULL,
    product_name text NOT NULL,
    product_version text NOT NULL,
    is_selectable boolean NOT NULL DEFAULT true,
    definition_locked_at timestamptz,
    CONSTRAINT uq_products_code_version UNIQUE (product_code, product_version)
);

CREATE TABLE IF NOT EXISTS production.product_slots (
    product_slot_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_id bigint NOT NULL REFERENCES production.products(product_id),
    slot_code text NOT NULL,
    part_id text NOT NULL REFERENCES production.parts(part_id),
    CONSTRAINT uq_product_slots_product_slot UNIQUE (product_id, slot_code)
);

CREATE INDEX IF NOT EXISTS ix_product_slots_part
    ON production.product_slots(part_id);

CREATE TABLE IF NOT EXISTS production.jobs (
    job_id uuid PRIMARY KEY,
    product_id bigint NOT NULL REFERENCES production.products(product_id),
    requested_quantity integer NOT NULL,
    recipe_version text NOT NULL,
    job_status text NOT NULL DEFAULT 'PENDING',
    requested_at timestamptz NOT NULL DEFAULT now(),
    job_started_at timestamptz,
    job_finished_at timestamptz,
    CONSTRAINT ck_jobs_quantity CHECK (requested_quantity > 0),
    CONSTRAINT ck_jobs_status CHECK (
        job_status IN ('PENDING', 'RUNNING', 'COMPLETED', 'FAILED', 'CANCELLED')
    ),
    CONSTRAINT ck_jobs_dates CHECK (
        (job_started_at IS NULL OR job_started_at >= requested_at)
        AND (job_finished_at IS NULL OR job_finished_at >= requested_at)
        AND (job_started_at IS NULL OR job_finished_at IS NULL
             OR job_finished_at >= job_started_at)
    )
);

CREATE INDEX IF NOT EXISTS ix_jobs_product_status
    ON production.jobs(product_id, job_status);
CREATE INDEX IF NOT EXISTS ix_jobs_queue
    ON production.jobs(requested_at)
    WHERE job_status = 'PENDING';
CREATE INDEX IF NOT EXISTS ix_jobs_product_recipe
    ON production.jobs(product_id, recipe_version);

-- The queue may contain multiple pending jobs, but only one may execute.
CREATE UNIQUE INDEX IF NOT EXISTS uq_jobs_single_running
    ON production.jobs ((1))
    WHERE job_status = 'RUNNING';

CREATE TABLE IF NOT EXISTS production.units (
    unit_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    job_id uuid NOT NULL REFERENCES production.jobs(job_id),
    unit_sequence_in_job integer NOT NULL,
    unit_status text NOT NULL DEFAULT 'RUNNING',
    inspection_result text NOT NULL DEFAULT 'PENDING',
    inspection_image_path text,
    assembly_started_at timestamptz NOT NULL DEFAULT now(),
    assembly_completed_at timestamptz,
    inspected_at timestamptz,
    CONSTRAINT uq_units_job_sequence UNIQUE (job_id, unit_sequence_in_job),
    CONSTRAINT ck_units_sequence CHECK (unit_sequence_in_job > 0),
    CONSTRAINT ck_units_status CHECK (
        unit_status IN ('RUNNING', 'COMPLETED', 'FAILED')
    ),
    CONSTRAINT ck_units_inspection CHECK (
        inspection_result IN ('PENDING', 'PASS', 'FAIL')
    ),
    CONSTRAINT ck_units_inspected CHECK (
        (inspection_result = 'PENDING' AND inspected_at IS NULL)
        OR
        (inspection_result IN ('PASS', 'FAIL')
         AND unit_status = 'COMPLETED'
         AND assembly_completed_at IS NOT NULL
         AND inspected_at IS NOT NULL)
    ),
    CONSTRAINT ck_units_dates CHECK (
        (assembly_completed_at IS NULL
         OR assembly_completed_at >= assembly_started_at)
        AND (inspected_at IS NULL OR assembly_completed_at IS NOT NULL)
        AND (inspected_at IS NULL OR inspected_at >= assembly_completed_at)
    )
);

CREATE INDEX IF NOT EXISTS ix_units_inspected_at
    ON production.units(inspected_at);

CREATE UNIQUE INDEX IF NOT EXISTS uq_units_single_running_per_job
    ON production.units(job_id)
    WHERE unit_status = 'RUNNING';

CREATE TABLE IF NOT EXISTS production.inventory_movements (
    inventory_movement_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    part_id text NOT NULL REFERENCES production.parts(part_id),
    quantity_delta integer NOT NULL,
    movement_type text NOT NULL,
    unit_id bigint REFERENCES production.units(unit_id),
    reason text NOT NULL,
    recorded_at timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT ck_inventory_movements_quantity CHECK (quantity_delta != 0),
    CONSTRAINT ck_inventory_movements_type CHECK (
        movement_type IN ('OPENING', 'RECEIPT', 'CONSUMPTION', 'ADJUSTMENT')
    ),
    CONSTRAINT ck_inventory_movements_reason CHECK (btrim(reason) != ''),
    CONSTRAINT ck_inventory_movements_context CHECK (
        (movement_type = 'CONSUMPTION'
         AND quantity_delta < 0
         AND unit_id IS NOT NULL)
        OR
        (movement_type IN ('OPENING', 'RECEIPT')
         AND quantity_delta > 0
         AND unit_id IS NULL)
        OR
        (movement_type = 'ADJUSTMENT' AND unit_id IS NULL)
    )
);

CREATE UNIQUE INDEX IF NOT EXISTS uq_inventory_movements_unit_part
    ON production.inventory_movements(unit_id, part_id)
    WHERE movement_type = 'CONSUMPTION';

CREATE UNIQUE INDEX IF NOT EXISTS uq_inventory_movements_opening
    ON production.inventory_movements(part_id)
    WHERE movement_type = 'OPENING';

CREATE INDEX IF NOT EXISTS ix_inventory_movements_part_time
    ON production.inventory_movements(
        part_id, recorded_at, inventory_movement_id
    );

CREATE TABLE IF NOT EXISTS production.unit_defects (
    unit_defect_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    unit_id bigint NOT NULL REFERENCES production.units(unit_id),
    product_slot_id bigint NOT NULL
        REFERENCES production.product_slots(product_slot_id),
    defect_type text NOT NULL,
    CONSTRAINT uq_unit_defects_unit_slot UNIQUE (unit_id, product_slot_id),
    CONSTRAINT ck_unit_defects_type CHECK (
        defect_type IN ('MISSING', 'POSITION_ERROR', 'ORIENTATION_ERROR', 'CRACK')
    )
);

CREATE INDEX IF NOT EXISTS ix_unit_defects_product_slot
    ON production.unit_defects(product_slot_id);

COMMIT;
