// production 스키마 — dbdiagram.io 붙여넣기용
// https://dbdiagram.io/d
// 상세 계약과 칼럼 평가는 Docs/DB.md를 참고한다.
// 부품 데이터시트와 불량대책서는 Docs/DB.md를 참고한다.
// 이 파일은 production 스키마만 정의한다.

Table parts {
  part_id text [pk]
  part_name text [not null]
  part_category text [not null, note: 'GPU, HBM, HEATSINK 등 부품 분류']
  stock_quantity integer [not null, default: 0, note: '현재고. 0 이상']

  Note: '부품 기준정보와 빠른 조회용 현재고. 변동 원장은 inventory_movements가 저장한다'
}

Table products {
  product_id bigint [pk, increment]
  product_code text [not null]
  product_name text [not null]
  product_version text [not null]
  is_selectable boolean [not null, default: true]
  definition_locked_at timestamptz [note: '첫 작업 생성 후 제품과 슬롯 정의를 잠근 시각']

  Note: '사용자가 선택할 완성체의 한 버전'

  Indexes {
    (product_code, product_version) [unique]
  }
}

Table product_slots {
  product_slot_id bigint [pk, increment]
  product_id bigint [not null]
  slot_code text [not null, note: 'Unity와 검사 시스템이 공유하는 장착 위치 코드']
  part_id text [not null]

  Note: '한 행 = 완성체의 물리 슬롯 한 곳 = 부품 하나. 구조만 정의하고 조립 순서는 담지 않는다'

  Indexes {
    (product_id, slot_code) [unique]
    (part_id)
  }
}

Table jobs {
  job_id uuid [pk]
  product_id bigint [not null]
  requested_quantity integer [not null, note: '1 이상']
  recipe_version text [not null, note: '이 작업을 실행한 조립 레시피 버전. 레시피 본문은 백엔드가 소유한다']
  job_status text [not null, default: 'PENDING', note: 'PENDING, RUNNING, COMPLETED, FAILED, CANCELLED']
  requested_at timestamptz [not null]
  job_started_at timestamptz
  job_finished_at timestamptz

  Note: '사용자가 선택한 완성체와 요청 수량 한 건'

  Indexes {
    (product_id, job_status)
    (requested_at)
    (product_id, recipe_version)
  }
}

Table units {
  unit_id bigint [pk, increment]
  job_id uuid [not null]
  unit_sequence_in_job integer [not null, note: '작업 안에서 1부터 시작하는 완성품 순번']
  unit_status text [not null, default: 'RUNNING', note: 'RUNNING, COMPLETED, FAILED']
  inspection_result text [not null, default: 'PENDING', note: 'PENDING, PASS, FAIL']
  inspection_image_path text
  assembly_started_at timestamptz [not null]
  assembly_completed_at timestamptz
  inspected_at timestamptz

  Note: '실제로 조립을 시작한 완성품 한 대와 최종 검사 결과'

  Indexes {
    (job_id, unit_sequence_in_job) [unique]
    (inspected_at)
  }
}

Table unit_defects {
  unit_defect_id bigint [pk, increment]
  unit_id bigint [not null]
  product_slot_id bigint [not null]
  defect_type text [not null, note: 'MISSING, POSITION_ERROR, ORIENTATION_ERROR, CRACK']

  Note: '최종 검사에서 불량으로 판정된 슬롯만 저장한다'

  Indexes {
    (unit_id, product_slot_id) [unique]
    (product_slot_id)
  }
}

Table inventory_movements {
  inventory_movement_id bigint [pk, increment]
  part_id text [not null]
  quantity_delta integer [not null, note: '0이 아닌 증감량. 입고 양수, 소비 음수']
  movement_type text [not null, note: 'OPENING, RECEIPT, CONSUMPTION, ADJUSTMENT']
  unit_id bigint [note: 'CONSUMPTION일 때만 필수']
  reason text [not null]
  recorded_at timestamptz [not null, default: `now()`]

  Note: '현재고가 왜 언제 변했는지 남기는 append-only 재고 원장'

  Indexes {
    (unit_id, part_id) [unique, note: 'CONSUMPTION 행에만 적용']
    (part_id) [unique, note: 'OPENING 행에만 적용']
    (part_id, recorded_at, inventory_movement_id)
  }
}

TableGroup "production · 기준정보" [color: #2D5F9A] {
  parts
  products
  product_slots
}

TableGroup "production · 실행·검사" [color: #C97316] {
  jobs
  units
  unit_defects
  inventory_movements
}

Ref: product_slots.product_id > products.product_id
Ref: product_slots.part_id > parts.part_id
Ref: jobs.product_id > products.product_id
Ref: units.job_id > jobs.job_id
Ref: unit_defects.unit_id > units.unit_id
Ref: unit_defects.product_slot_id > product_slots.product_slot_id
Ref: inventory_movements.part_id > parts.part_id
Ref: inventory_movements.unit_id > units.unit_id
